# portfolio-ia

./: .gitignore
01_ML_Foundations/01_titanic-ml-foundations/: README.md  pyproject.toml  requirements.txt
01_ML_Foundations/01_titanic-ml-foundations/outputs/reports/: baseline_report_rs6_ts20_cv5.md  comparison_report_rs6_ts20_cv5.md  metrics_rs6_ts20_cv5.json  metrics_rs6_ts20_cv5_20260204_211908.json  metrics_rs6_ts20_cv5_20260302_135750.json
01_ML_Foundations/01_titanic-ml-foundations/scripts/: 00_check_data.py  01_baseline_logreg.py  02_model_comparison.py
01_ML_Foundations/01_titanic-ml-foundations/src/titanic_ml_foundations/: config.py
01_ML_Foundations/02_house-prices-ml-foundations/: pyproject.toml
01_ML_Foundations/02_house-prices-ml-foundations/outputs/reports/: REPORT_20260406_204148.md  error_analysis_rf_pipe_20260406_204054.csv  error_analysis_rf_pipe_20260406_204054.json  error_analysis_rf_pipe_20260406_204054_summary.json  metrics_baseline_20260406_202541.json  model_comparison_report_20260324_190413.json  report_model_comparison_20260406_202723.json  rf_final_holdout_20260324_203008.json  rf_final_holdout_20260406_203829.json  (+4 more)
01_ML_Foundations/02_house-prices-ml-foundations/scripts/: 00_check_data.py  01_baseline_model.py  02_model_comparison.py  03_tune_rf.py  04_rf_final_holdout.py  05_make_submission_rf.py  06_generate_report.py  09_check_champion.py  10_train_champion_and_export.py  11_predict_submission_from_model.py  12_error_analysis.py  13_error_analysis_plots.py  14_features_correlation.py  20_train_champion_mlflow.py
(+44 files in other folders)
